--- a/Frontend_Movies/src/index.css
+++ b/Frontend_Movies/src/index.css
@@ -3,9 +3,9 @@
 @tailwind utilities;
 
 :root {
-  font-family:  Helvetica, Arial, sans-serif;
+  font-family: 'Inter';
+
   line-height: 1.5;
-  font-weight: 400;
   color: white;
 
 
@@ -18,4 +18,9 @@
   margin: 0px;
   box-sizing: border-box;
 
+}
+
+
+::-webkit-scrollbar {
+  display: none;
 }
